<resources>
    <string name="app_name">Spell Binder</string>
    <string name="mm_button_spells">Spells</string>
    <string name="mm_button_monsters">Monsters</string>
    <string name="mm_button_documents">Documents</string>
    <string name="mm_button_backgrounds">Backgrounds</string>
    <string name="mm_button_planes">Planes</string>
    <string name="mm_button_sections">Sections</string>
    <string name="mm_button_feats">Feats</string>
    <string name="mm_button_conditions">Conditions</string>
    <string name="mm_button_races">Races</string>
    <string name="mm_button_classes">Classes</string>
    <string name="mm_button_magic_items">Magic Items</string>
    <string name="mm_button_weapons">Weapons</string>
    <string name="title_activity_spell_data">SpellDataActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
<!--    <string name="next">Next</string>-->
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_spells_data">SpellsDataActivity</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
</resources>